package practice3;

public enum Skill {
    BACKEND_DEVELOPMENT,
    FRONTEND_DEVELOPMENT,
    WEB_DESIGN,
    ARCHITECT,
    MANAGEMENT
}