package practice3.employee;
import java.util.List;

import practice3.Skill;

public interface Employee {
    String getName();
    List<Skill> getSkills();
}