package practice3.requirement;

public record Artifact(String title, String body, String auther, boolean isSuccess) {
    
}
