package practice3.requirement;

public record Requirement(String title, String body, String type) {
    
}
